--- a/styles.css
+++ b/styles.css
@@ -141,9 +141,228 @@
 /* ---------------------------------------
                 section 3
 ---------------------------------------*/
+.section3{
+    width: 1440px;
+    margin: 0px 240px 130px 240px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 54px;
+}
+.article-container{
+    width: 586px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.article-title{
+    font-size: 45px;
+    font-weight: 700;
+    color: var(--dark1);
+    border-left: 5px solid var(--orange);
+    padding-left: 21px;
+}
+
+.article-description{
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--dark3);
+    padding-top: 24px;
+    padding-bottom: 30px;
+}
 
 
 
+.shadow-box{
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    padding: 30px 30px 30px 30px;
+}
+.shadow-header{
+    font-weight: 600;
+    font-size: 20px;
+    color: var(--dark1);
+    margin-bottom: 10px;
+}
+.shadow-p{
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--dark3);
+}
+.image-container{
+    position: relative;
+    width: 800px;
+}
+.image-container img{
+    margin: 0px 0px 77px 92px;
+    width: 708px;
+    z-index: 1;
+    position: absolute;
+}
+
+.large-button{
+    color: white;
+    background-color: var(--orange);
+    width: 342px;
+    margin: 859px 458px 0px 0px;
+    padding: 45px 42px 45px 42px;
+    border: 0px;
+    border-radius: 8px;
+    position: absolute;
+    z-index: 2;
+}
+
+.buttonXL{
+    font-weight: 700;
+    font-size: 65px;
+}
+.buttonL{
+    font-weight: 500;
+    font-size: 25px;
+}
 /* ---------------------------------------
                 section 4
 ---------------------------------------*/
+
+.section4{
+    padding-left: 240px;
+    padding-right: 240px;
+}
+
+.section4 header{
+    font-weight: 700;
+    font-size: 45px;
+    color: var(--dark1);
+}
+
+.section4 p{
+    font-weight: 400;
+    font-size: 16px;
+    padding-top: 24px;
+    padding-bottom: 100px;
+    color: var(--dark3);
+}
+.fact-icons{
+    display: flex;
+    justify-content:space-around;
+}
+.icon{
+    border: 1px solid var(--orange);
+    width: 169px;
+    height: 160px;
+    border-radius: 8px;
+    padding: 45px 35px 45px 35px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.icon img{  
+    width: 45.22px;
+    height: 45.22px;
+}
+.icon h3{
+    text-align: center;
+    font-weight: 600;
+    font-size: 45px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    color: var(--dark2);
+}
+.icon p{
+    text-align: center;
+    font-weight: 700;
+    font-size: 20px;
+    color: var(--dark3);
+}
+/* ---------------------------------------
+                section 5
+---------------------------------------*/
+.section5{
+    margin-left: 240px;
+    margin-right: 240px;
+    padding-top: 180px;
+    align-items: center;
+    text-align: center;
+}
+.section5 header{
+    font-weight: 700;
+    font-size: 45px;
+    color: var(--dark1);
+}
+
+.section5 p{
+    font-weight: 400;
+    font-size: 16px;
+    padding-top: 24px;
+    padding-bottom: 50px;
+    color: var(--dark3);
+}
+.sponsors{
+    display: flex;
+    background-color: white;
+    justify-content: space-between;
+}
+
+.sponsors img{
+    mix-blend-mode: luminosity;
+}
+
+/* ---------------------------------------
+                additional section 
+---------------------------------------*/
+.about-us-header{
+    text-align: center;
+    font-size: 40px;
+    font-weight:700;
+}
+
+.about-us{   
+    padding-top: 50px;
+    margin-top: 50px;
+    background-color: #ececec;
+}
+.about-us-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 100px 150px 75px 150px;
+    padding-top: 30px; 
+    text-align: center;
+    
+}
+
+
+.dev img{
+    width: 50%;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    margin-bottom: 10px;
+    transition: width .5s linear .1s;
+}
+.dev img:hover{
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    margin-bottom: 10px;
+}
+.dev-name{
+    font-size: 24px;
+    font-style: bold;
+}
+
+
+/* ---------------------------------------
+                footer
+---------------------------------------*/
+.footer-p{
+    width: 1440px;
+    height: 100px;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+    color: var(--dark2);
+    background-color: rgba(255, 144, 14, 0.1);
+    margin: 130px 240px 216px 240px;
+}
