--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap');
 *{
-    margin: 0px;
+    margin: 0;
+    padding: 0;
     font-family: 'Work Sans', sans-serif;
 }
 :root{
@@ -142,15 +143,18 @@
                 section 3
 ---------------------------------------*/
 .section3{
-    width: 1440px;
-    margin: 0px 240px 130px 240px;
+    max-width: 100vw;
+    /* margin: 0px 240px 130px 240px; */
+    padding: 0 150px;
+    margin-bottom: 130px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     gap: 54px;
 }
 .article-container{
-    width: 586px;
+    /* width: 586px; */
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -173,7 +177,6 @@
 }
 
 
-
 .shadow-box{
     background: #FFFFFF;
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
@@ -193,25 +196,24 @@
 }
 .image-container{
     position: relative;
-    width: 800px;
+    /* width: 800px; */ width: 40%;
 }
 .image-container img{
-    margin: 0px 0px 77px 92px;
-    width: 708px;
-    z-index: 1;
-    position: absolute;
+    /* margin: 0px 0px 77px 92px; */
+   width: 100%;
 }
 
 .large-button{
     color: white;
     background-color: var(--orange);
     width: 342px;
-    margin: 859px 458px 0px 0px;
+    /* margin: 859px 458px 0px 0px; */
     padding: 45px 42px 45px 42px;
     border: 0px;
     border-radius: 8px;
     position: absolute;
-    z-index: 2;
+    bottom: -50px;
+    left: -60px;
 }
 
 .buttonXL{
@@ -257,6 +259,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: all .3s ease-in-out;
+}
+
+.icon:hover{
+    /* border: 5px solid var(--orange); */
+    scale: 1.08;
 }
 .icon img{  
     width: 45.22px;
@@ -356,13 +364,45 @@
 /* ---------------------------------------
                 footer
 ---------------------------------------*/
-.footer-p{
-    width: 1440px;
-    height: 100px;
-    font-weight: 400;
-    font-size: 20px;
+.footer{
+    max-width: 100%;
+   padding: 39px;
     text-align: center;
-    color: var(--dark2);
     background-color: rgba(255, 144, 14, 0.1);
     margin: 130px 240px 216px 240px;
+}
+
+.footer p{
+    font-weight: 400;
+    font-size: 20px;
+    color: var(--dark2);
+}
+
+/* ---------------------------------------
+                media queries
+---------------------------------------*/
+
+@media only screen and (max-width:688px) {
+    .top-line{
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 50px;
+        justify-content: space-between;
+    }
+    .main-header{
+        padding-bottom: 20px;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        justify-content: space-around;
+        gap: 40px;
+    }
+    .saction2{
+        display: none;
+    }
 }
