--- a/styles.css
+++ b/styles.css
@@ -383,6 +383,9 @@
 ---------------------------------------*/
 
 @media only screen and (max-width:688px) {
+    .section1{
+        padding: 2px 2px;
+    }
     .top-line{
         max-width: 100%;
         display: flex;
@@ -391,6 +394,12 @@
         justify-content: center;
         padding-top: 50px;
         justify-content: space-between;
+    }
+    .title-article{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 10px 10px 10px 10px; 
     }
     .main-header{
         padding-bottom: 20px;
@@ -402,7 +411,267 @@
         justify-content: space-around;
         gap: 40px;
     }
-    .saction2{
-        display: none;
+    /* ---------------------------------------
+                section 2
+---------------------------------------*/
+    .section2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        /* padding: 85px 301px 130px 301px; */
+        /* gap: 73px; */
     }
+    .teams{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 24px;
+    }
+    
+/* ---------------------------------------
+                section 3
+---------------------------------------*/
+.section3{
+    max-width: 100vw;
+    /* margin: 0px 240px 130px 240px; */
+    padding: 0 50px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 5px;
+}
+.article-container{
+    /* width: 586px; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.article-title{
+    font-size: 45px;
+    font-weight: 700;
+    color: var(--dark1);
+    border-left: 5px solid var(--orange);
+    padding-left: 21px;
+}
+
+.article-description{
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--dark3);
+    padding-top: 24px;
+    padding-bottom: 30px;
+}
+
+
+.shadow-box{
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    padding: 30px 30px 30px 30px;
+}
+.shadow-header{
+    font-weight: 600;
+    font-size: 20px;
+    color: var(--dark1);
+    margin-bottom: 10px;
+}
+.shadow-p{
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--dark3);
+}
+.image-container{
+    position: relative;
+    /* width: 800px; */ width: 40%;
+}
+.image-container img{
+    /* margin: 0px 0px 77px 92px; */
+   width: 100%;
+}
+
+.large-button{
+    color: white;
+    background-color: var(--orange);
+    /* width: 342px; */
+    /* margin: 859px 458px 0px 0px; */
+    padding: 45px 42px 45px 42px;
+    border: 0px;
+    border-radius: 8px;
+    position: absolute;
+    bottom: -50px;
+    left: -60px;
+}
+
+.buttonXL{
+    font-weight: 700;
+    font-size: 65px;
+}
+.buttonL{
+    font-weight: 500;
+    font-size: 25px;
+}
+/* ---------------------------------------
+                section 4
+---------------------------------------*/
+
+.section4{
+    padding-top: 50px;
+    padding-right: 50px;
+    padding-left: 50px; 
+}
+
+.section4 header{
+    font-weight: 700;
+    font-size: 45px;
+    color: var(--dark1);
+}
+
+.section4 p{
+    font-weight: 400;
+    font-size: 16px;
+    padding-top: 24px;
+    padding-bottom: 100px;
+    color: var(--dark3);
+}
+.fact-icons{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+}
+.icon{
+    border: 1px solid var(--orange);
+    /* width: 169px; */
+    /* height: 160px; */
+    border-radius: 8px;
+    padding: 45px 35px 45px 35px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all .3s ease-in-out;
+}
+
+.icon:hover{
+    /* border: 5px solid var(--orange); */
+    scale: 1.08;
+}
+.icon img{  
+    width: 45.22px;
+    height: 45.22px;
+}
+.icon h3{
+    text-align: center;
+    font-weight: 600;
+    font-size: 45px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    color: var(--dark2);
+}
+.icon p{
+    text-align: center;
+    font-weight: 700;
+    font-size: 20px;
+    color: var(--dark3);
+}
+/* ---------------------------------------
+                section 5
+---------------------------------------*/
+.section5{
+    margin-left: 24px;
+    margin-right: 24px;
+    padding-top: 20px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.section5 header{
+    text-align: center;
+    font-weight: 700;
+    font-size: 45px;
+    color: var(--dark1);
+}
+
+.section5 p{
+    text-align: center;
+    font-weight: 400;
+    font-size: 16px;
+    padding-top: 24px;
+    padding-bottom: 50px;
+    color: var(--dark3);
+}
+.sponsors{
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+    background-color: white;
+    row-gap: 100px;
+}
+
+.sponsors img{
+    mix-blend-mode: luminosity;
+}
+
+/* ---------------------------------------
+                additional section 
+---------------------------------------*/
+.about-us-header{
+    text-align: center;
+    font-size: 40px;
+    font-weight:700;
+}
+
+.about-us{   
+    padding-top: 50px;
+    margin-top: 50px;
+    background-color: #ececec;
+}
+.about-us-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* padding: 100px 150px 75px 150px; */
+    padding-top: 30px; 
+    text-align: center;
+    
+}
+
+
+.dev img{
+    width: 50%;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    margin-bottom: 10px;
+    transition: width .5s linear .1s;
+}
+.dev img:hover{
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    margin-bottom: 10px;
+}
+.dev-name{
+    font-size: 24px;
+    font-style: bold;
+}
+
+
+/* ---------------------------------------
+                footer
+---------------------------------------*/
+.footer{
+    max-width: 100%;
+   padding: 39px;
+    text-align: center;
+    background-color: rgba(255, 144, 14, 0.1);
+    margin: 60px 25px 25px 25px;;
+}
+
+.footer p{
+    font-weight: 400;
+    font-size: 20px;
+    color: var(--dark2);
+}
 }
