--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
     padding-left: 240px;
     padding-right: 240px;
     padding-bottom: 45px;
+    margin-right: -30px;
 }
 
 .top-line{
@@ -624,6 +625,7 @@
 }
 
 .about-us{   
+    margin-right: -30px;
     padding-top: 50px;
     margin-top: 50px;
     background-color: #ececec;
