--- a/styles.css
+++ b/styles.css
@@ -380,7 +380,9 @@
 }
 
 /* ---------------------------------------
-                media queries
+------------------------------------------
+                media querie
+------------------------------------------
 ---------------------------------------*/
 
 @media only screen and (max-width:688px) {
